[package]
name = "frosthaven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
actix-web = "4"
actix-files = "0.6.0"
serde = { version = "1.0.164", features = ["derive"] }
lazy_static = "1.4"
#rusqlite = { version = "0.30.0", features = ["bundled"] }
r2d2_sqlite = {version = "0.22.0", features = ["bundled"] }
r2d2 = "0.8.10"
serde_json = "1.0.111"
